# dataeval-plots

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MIGRATION.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
src/dataeval/plots/: __init__.py  bias.py  drift.py  stats.py  utils.py  workflows.py
src/dataeval_plots/: __init__.py  _registry.py  _sufficiency.py  _utils.py  protocols.py
src/dataeval_plots/backends/: _altair.py  _base.py  _matplotlib.py  _plotly.py  _seaborn.py  _shared.py
tests/: conftest.py  test_altair_backend.py  test_backend_base.py  test_base_backend.py  test_base_installation.py  test_matplotlib_backend.py  test_plotly_backend.py  test_seaborn_backend.py  test_shared_helpers.py
